@@ -1,3 +1,4 @@
+ - #70 impl for service : POST /referral/invalidate
  - #66 impl for service : POST /referral/add
  - #62 impl for service : PUT /job/invalidate
  - #52 impl for service : GET /job/jobs
